2002-09-18  Marcus Brinkmann  <marcus@gnu.org>

	* console.h (struct cons_display): Add a new flag
	CONS_FLAGS_TRACK_MOUSE.
	(CONS_MOUSE_BUTTON_MASK, CONS_MOUSE_BUTTON1, CONS_MOUSE_BUTTON2,
	CONS_MOUSE_BUTTON3, CONS_MOUSE_RELEASE, CONS_MOUSE_MOD_MASK,
	CONS_MOUSE_MOD_SHIFT, CONS_MOUSE_MOD_META, CONS_MOUSE_MOD_CTRL,
	CONS_MOUSE_OFFSET_BASE, CONS_MOUSE_EVENT_LENGTH,
	CONS_MOUSE_EVENT_PREFIX, CONS, MOUSE_EVENT): New macro.
	(CONS_KEY_B2): New macro.

2002-09-16  Marcus Brinkmann  <marcus@gnu.org>

	* console.h (conchar_attr_t): Add bits for italic and bold text
	attributes.

2002-09-10  Marcus Brinkmann  <marcus@gnu.org>

	* console.h (struct cons_display): New member FLAGS.
	(union cons_change_t): Likewise for WHAT->flags.

2002-09-04  Marcus Brinkmann  <marcus@gnu.org>

	* console.h: Include <wchar.h>.

2002-08-28  Marcus Brinkmann  <marcus@gnu.org>

	* console.h (struct cons_display): Fix comment on CUR_LINE.

2002-08-22  Marcus Brinkmann  <marcus@gnu.org>

	* console.h: Move here from ../console/.
	* Makefile (INSTHDRS): Add console.h.

2002-08-03  Marcus Brinkmann  <marcus@gnu.org>

	* hurd_types.defs (fsys_statfsbuf_t): Bump size up to 22.

2002-06-26  Marcus Brinkmann  <marcus@gnu.org>

	* fs_notify.defs: Add MsgOption for send timeout.
	(dir_changed): Changed to simpleroutine.  Change type of first
	argument to fs_notify_t.  Add TICKNO argument.
	(file_changed): Likewise.
	* hurd_types.defs (fs_notify_t): New type.
	* hurd_types.h (fs_notify_t): Likewise.

2002-06-14  Roland McGrath  <roland@frob.com>

	* paths.h (_SERVERS_DEFPAGER): New macro.

2002-06-13  Roland McGrath  <roland@frob.com>

	* fs.defs (dir_readdir): Revert AMOUNT type to int, since it's a count
	of entries and not a byte count.

2002-06-09  Roland McGrath  <roland@frob.com>

	* version.h: New file.
	* Makefile (INSTHDRS): Add it.

2002-06-08  Roland McGrath  <roland@frob.com>

	* hurd_types.defs (loff_t, ino64_t): New types, 64 bits.
	(off_t): Type removed.