@@ -1,3 +1,7 @@
+2002-10-04  Marcus Brinkmann  <marcus@gnu.org>
+
+	* console.h (struct cons_display): Doc fix.
+
 2002-09-18  Marcus Brinkmann  <marcus@gnu.org>
 
 	* console.h (struct cons_display): Add a new flag
